--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,14 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    //noinspection GradleCompatible
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation "androidx.viewpager:viewpager:1.0.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
