--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,19 +4,27 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ikona_aplikacji"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ikona_aplikacji"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Cocktails"
+        android:theme="@style/MotywAplikacji"
         tools:targetApi="31">
-        <activity
-            android:name=".TempActivity"
-            android:exported="false"/>
+        <activity android:name=".ActionActivity"
+            android:label="@string/action_title"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
         <activity
             android:name=".DetailsActivity"
             android:exported="false"
             android:theme="@style/Theme.Cocktails" />
+        <activity
+            android:name=".CocktailDetailActivity"
+            android:parentActivityName=".MainActivity">
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
