--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="pl.put.poznan.aplikacje.mobilne.cocktails.SingleFragmentActivity" />
     </application>
 
 </manifest>
